--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@remix-run/node": "^1.11.1",
     "@remix-run/react": "^1.11.1",
+    "date-fns": "^2.29.3",
     "framer-motion": "^9.0.2",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
