--- a/package.json
+++ b/package.json
@@ -2,21 +2,14 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s \"build:*\"",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev": "run-p \"dev:*\"",
-    "dev:css": "npm run generate:css -- --watch --minify",
-    "dev:remix": "remix dev",
+    "build": "remix build",
+    "dev": "remix dev",
     "start": "remix-serve build",
-    "generate:css": "npx tailwindcss -i ./tailwindcss/global.css -o ./app/glossy/app.css",
-    "typecheck": "tsc -b",
-    "i18n:pull": "i18nexus pull",
-    "i18n:push": "i18nexus push"
+    "typecheck": "tsc -b"
   },
   "dependencies": {
-    "@remix-run/node": "^1.11.1",
-    "@remix-run/react": "^1.11.1",
+    "@remix-run/node": "^1.13.0",
+    "@remix-run/react": "^1.13.0",
     "date-fns": "^2.29.3",
     "framer-motion": "^9.0.2",
     "i18next": "^22.4.9",
@@ -29,10 +22,10 @@
     "remix-i18next": "^5.0.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.11.1",
-    "@remix-run/eslint-config": "^1.11.1",
-    "@remix-run/serve": "^1.11.1",
-    "@remix-run/server-runtime": "^1.11.1",
+    "@remix-run/dev": "^1.13.0",
+    "@remix-run/eslint-config": "^1.13.0",
+    "@remix-run/serve": "^1.13.0",
+    "@remix-run/server-runtime": "^1.13.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.31.0",
