--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typecheck": "tsc -b"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.1",
     "@remix-run/node": "^1.13.0",
     "@remix-run/react": "^1.13.0",
     "date-fns": "^2.29.3",
