select-input not droping

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-icons": "^1.2.0",
+    "@radix-ui/react-select": "^1.2.0",
     "@remix-run/node": "^1.13.0",
     "@remix-run/react": "^1.13.0",
     "date-fns": "^2.29.3",
