--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
-    "remix-i18next": "^5.0.0"
+    "remix-i18next": "^5.0.0",
+    "tailwindcss-radix": "^2.7.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.13.0",
@@ -39,6 +40,7 @@
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.7",
+    "tailwindcss-font-inter": "^3.0.1",
     "typescript": "^4.8.4"
   },
   "engines": {
